--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <header>
             
             
-    <a href="./index.html" class="logo">Web<span class="logo-part">Studio</span></a>
+    <a href="./index.html" class="logo">WEB<span class="logo-part">STUDIO</span></a>
             <nav>
                 <ul>
                     <li><a class="link-navigation" href="">studio</a></li>
@@ -110,7 +110,7 @@
 
 
 
-        <a href="./index.html" class="logo">Web<span class="logo-part1">Studio</span></a>
+        <a href="./index.html" class="logo">WEB<span class="logo-part1">STUDIO</span></a>
 
 
     <p class="footer-paragraph">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
