--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <a href="./index.html" class="logo">WEB<span class="logo-part">STUDIO</span></a>
             <nav>
                 <ul>
-                    <li><a class="link-navigation" href="">studio</a></li>
-                    <li><a class="link-navigation" href="">portfolio</a></li>
-                    <li><a class="link-navigation" href="">contacts</a></li>
+                    <li><a class="link-navigation" href="./index.html">studio</a></li>
+                    <li><a class="link-navigation" href="./index.html">portfolio</a></li>
+                    <li><a class="link-navigation" href="./index.html">contacts</a></li>
                 </ul>
                 
             </nav>
