--- a/index.html
+++ b/index.html
@@ -105,43 +105,43 @@
  </ul>
 </section>
 <section>
-    <h2>Our Portfolio</h2>
+    <h2 class="our-portfolio">Our Portfolio</h2>
 <ul>
     <li><img src="./images/Banking App.jpg" alt="Banking App"
         width="360"
         height="300"/>
-        <h3 class="name">Banking App</h3>
-        <p class="name-paragraph">App</p>
+        <h3 class="name-portfolio">Banking App</h3>
+        <p class="name-p">App</p>
     </li>
  <li><img src="./images/Cashless Payment.jpg" alt="Cashless Payment"
         width="360"
         height="300"/>
-        <h3 class="name">Cashless Payment</h3>
-        <p class="name-paragraph">Marketing</p>
+        <h3 class="name-portfolio">Cashless Payment</h3>
+        <p class="name-p">Marketing</p>
     </li>
  <li><img src="./images/Meditation App.jpg" alt="Meditation App"
         width="360"
         height="300"/>
-        <h3 class="name">Meditation App</h3>
-        <p class="name-paragraph">App</p>
+        <h3 class="name-portfolio">Meditation App</h3>
+        <p class="name-p">App</p>
 </li>
  <li><img src="./images/Taxi Service.jpg" alt="Taxi Service"
         width="360"
         height="300"/>
-        <h3 class="name">Taxi Service</h3>
-        <p class="name-paragraph">Marketing</p>
+        <h3 class="name-portfolio">Taxi Service</h3>
+        <p class="name-p">Marketing</p>
 </li>
  <li><img src="./images/Screen Illustrations.jpg" alt="Screen Illustrations"
         width="360"
         height="300"/>
-        <h3 class="name">Screen Illustrations</h3>
-        <p class="name-paragraph">Design</p>
+        <h3 class="name-portfolio">Screen Illustrations</h3>
+        <p class="name-p">Design</p>
 </li>
  <li><img src="./images/Online Courses.jpg" alt="Online Courses"
         width="360"
         height="300"/>
-        <h3 class="name">Online Courses</h3>
-        <p class="name-paragraph">Marketing</p>
+        <h3 class="name-portfolio">Online Courses</h3>
+        <p class="name-p">Marketing</p>
 </li>
 </ul>
 </section>
