--- a/index.html
+++ b/index.html
@@ -107,37 +107,37 @@
 <section>
     <h2 class="our-portfolio">Our Portfolio</h2>
 <ul>
-    <li><img src="./images/Banking App.jpg" alt="Banking App"
+    <li><img src="./images/BankingApp.jpg" alt="Banking App"
         width="360"
         height="300"/>
         <h3 class="name-portfolio">Banking App</h3>
         <p class="name-p">App</p>
     </li>
- <li><img src="./images/Cashless Payment.jpg" alt="Cashless Payment"
+ <li><img src="./images/CashlessPayment.jpg" alt="Cashless Payment"
         width="360"
         height="300"/>
         <h3 class="name-portfolio">Cashless Payment</h3>
         <p class="name-p">Marketing</p>
     </li>
- <li><img src="./images/Meditation App.jpg" alt="Meditation App"
+ <li><img src="./images/MeditationApp.jpg" alt="Meditation App"
         width="360"
         height="300"/>
         <h3 class="name-portfolio">Meditation App</h3>
         <p class="name-p">App</p>
 </li>
- <li><img src="./images/Taxi Service.jpg" alt="Taxi Service"
+ <li><img src="./images/TaxiService.jpg" alt="Taxi Service"
         width="360"
         height="300"/>
         <h3 class="name-portfolio">Taxi Service</h3>
         <p class="name-p">Marketing</p>
 </li>
- <li><img src="./images/Screen Illustrations.jpg" alt="Screen Illustrations"
+ <li><img src="./images/ScreenIllustrations.jpg" alt="Screen Illustrations"
         width="360"
         height="300"/>
         <h3 class="name-portfolio">Screen Illustrations</h3>
         <p class="name-p">Design</p>
 </li>
- <li><img src="./images/Online Courses.jpg" alt="Online Courses"
+ <li><img src="./images/OnlineCourses.jpg" alt="Online Courses"
         width="360"
         height="300"/>
         <h3 class="name-portfolio">Online Courses</h3>
