--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <header>
             
             
-    <a href="./index.html" class="logo">WEB<span class="logo-part">STUDIO</span></a>
+    <a href="./index.html" class="logo">web<span class="logo-part">studio</span></a>
             <nav>
                 <ul>
                     <li><a class="link-navigation" href="./index.html">studio</a></li>
@@ -150,7 +150,7 @@
 
 
 
-        <a href="./index.html" class="logo">WEB<span class="logo-part1">STUDIO</span></a>
+        <a href="./index.html" class="logo">web<span class="logo-part1">studio</span></a>
 
 
     <p class="footer-paragraph">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
