add initial files

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <nav>
                 <ul>
                     <li><a class="link-navigation" href="./index.html">studio</a></li>
-                    <li><a class="link-navigation" href="./index.html">portfolio</a></li>
-                    <li><a class="link-navigation" href="./index.html">contacts</a></li>
+                    <li><a class="link-navigation" href="">portfolio</a></li>
+                    <li><a class="link-navigation" href="">contacts</a></li>
                 </ul>
                 
             </nav>
