--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
 
 
-        <a href="./index.html" class="logo">web<span class="logo-part1">studio</span></a>
+        <a href="./index.html" class="logo">web<span class="logo-part-t">studio</span></a>
 
 
     <p class="footer-paragraph">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
