--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <header>
             
     <nav> 
-    <a href="./index.html" class="logo">web<span class="logo-part">studio</span></a>
+    <a href="./index.html" class="logo">Web<span class="logo-part">Studio</span></a>
             
                 <ul>
                     <li><a class="link-navigation" href="./index.html">studio</a></li>
