--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
 
 
-        <a href="./index.html" class="logo">Web<span class="logo-part-t">Studio</span></a>
+        <a href="./index.html" class="logo">Web<span class="logo-part">Studio</span></a>
 
 
     <p class="footer-paragraph">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
